# sglman

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  README.md  REFACTORING_GUIDE.md  SECURITY.md  api.py  config.py  docker-compose.yml  fly.toml  frontend.py  helper_generate_test_data.py  main.py  models.py  pyproject.toml  start.sh
.claude/: README.md  settings.json
.claude/agents/: architecture-reviewer.md
.claude/commands/: code-quality-audit.md  guardrail-audit.md
.claude/hooks/: doc-check.sh  doc-reminder.sh  install-deps.sh  session-start.sh
.github/: copilot-instructions.md
alembic/: env.py
api/: __init__.py  _match_view.py  dependencies.py  rate_limit.py
app_logic/: match.py
application/: audit.py  errors.py  feature_flags.py  match.py  match_events.py  room_usage.py  seedgen.py  tenant_context.py
data_import/: speedgaming.py
discordbot/: __init__.py  _ack_common.py  _tenant.py  bot.py  crew_acknowledgment.py  crew_signup.py  match_acknowledgment.py  volunteer_acknowledgment.py  watch_buttons.py
docs/: README.md  architecture.md  brackets-plan.md  current-state.md  deployment.md  design.md  development.md  host-based-routing-plan.md  multitenancy-plan.md  online-tournaments-plan.md  refactoring-guide.md  security-audit.md  timezone-handling.md  ux-audit.md
middleware/: auth.py  challonge_oauth.py  error_handlers.py  mock_auth.py  security_headers.py  tenant.py
migrations/: sample_data.sql  tortoise_config.py
models/: __init__.py  async_qualifier.py  audit.py  bracket.py  challonge.py  discord_events.py  enums.py  equipment.py  feature_flag.py  feedback.py  match.py  racetime.py  speedgaming.py  system.py  tenant.py  tournament.py  user.py  volunteer.py  webhook.py
pages/: _oauth_link.py  admin.py  announcements.py  auth.py  availability.py  brackets.py  challonge_oauth.py  crew.py  dialogues.py  equipment.py  equipment_labels.py  general.py  home.py  match_table_common.py  platform.py  player.py  qualifiers.py  racetime_oauth.py  reports.py  schedule.py  service_health_view.py  stage_timeline.py  test.py  tournament_table_common.py  triforce_texts.py  twitch_oauth.py  user_table_common.py  volunteer.py
racetimebot/: __init__.py  connection.py  handler.py  manager.py  mock.py  transport.py
scripts/: generate_pwa_icons.py  generate_vapid_keys.py  grant_staff.py  grant_super_admin.py  seed_brackets.py  seed_challonge.py  seed_dev.py  seed_online.py  seed_tenant.py  setup_env.sh  ui_smoke.js
static/: manifest.webmanifest  sw.js
tests/: api_helpers.py  conftest.py  factories.py  test_api_admin_writes.py  test_api_async_qualifier_live_races.py  test_api_async_qualifiers.py  test_api_brackets.py  test_api_config_tenant_isolation.py  test_api_coverage_gaps.py  test_api_discord_events.py  test_api_health.py  test_api_match_writes.py  test_api_matches.py  test_api_phase5_writes.py  test_api_presets.py  test_api_race_room_profiles.py  test_api_race_rooms.py  test_api_racetime_bots.py  test_api_reads.py  test_api_router_gaps.py  test_api_seeds.py  test_api_service_health.py  test_api_speedgaming.py  test_api_tenant_isolation.py  test_api_tokens.py  test_api_volunteers.py  test_api_webhooks.py  test_async_qualifier_live_race_tenant_isolation.py  test_async_qualifier_tenant_isolation.py  test_bracket_tenant_isolation.py  test_color_contrast.py  test_csv_export.py  test_discord_events_tenant_isolation.py  test_equipment_labels_page.py  test_error_handlers.py  test_feature_flags.py  test_host_oauth.py  test_hostname.py  test_infra_coverage.py  test_leak_test_coverage.py  (+20 more)
theme/: availability_editor.py  base.py  empty_state.py  error_page.py  match_table.py  menu.py  notify.py  realtime.py  theme.py
(+554 files in other folders)
