[tool.poetry]
name = "sgliveadmin"
version = "0.1.0"
description = ""
authors = ["Thomas Prescott <tcprescott@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
nicegui = "^2.11.1"
fastapi = "^0.115.8"
pyyaml = "^6.0.2"
asyncpg = "^0.30.0"
tortoise-orm = {extras = ["asyncpg"], version = "^0.24.0"}
aerich = {extras = ["toml"], version = "^0.8.1"}
cryptography = "^45.0.7"
zenora = "^0.0.3.post1"
py-cord = "^2.6.1"
faker = "^37.6.0"
python-dotenv = "^1.1.1"
discord-py = "^2.6.3"
pyz3r = "^6.1.0"



[tool.poetry.group.dev.dependencies]
ipython = "^8.32.0"
pytest = "^8.0"
pytest-asyncio = "^0.24"
pytest-mock = "^3.14"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.aerich]
tortoise_orm = "migrations.tortoise_config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
